--- a/backend/blog/templates/blog/post_detail.html
+++ b/backend/blog/templates/blog/post_detail.html
@@ -32,6 +32,19 @@
             <div class="container p-md-3">
                 <p>{{ post.body }}</p>
             </div>
+
+            <!-- Similar Posts -->
+            <div class="container p-md-3 mb-3 bg-light">
+                <h2>Similar posts</h2>
+                {% for post in similar_posts %}
+                <p>
+                    <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+                </p>
+                {% empty %}
+                There are no similar posts yet.
+                {% endfor %}
+            </div>
+
             <ul class="nav nav-pills nav-pills-icons justify-content-center" role="tablist">
                 <!--
                     color-classes: "nav-pills-primary", "nav-pills-info", "nav-pills-success", "nav-pills-warning","nav-pills-danger"
