--- a/backend/blog/templates/blog/post_list.html
+++ b/backend/blog/templates/blog/post_list.html
@@ -24,6 +24,9 @@
     <div class="container">
         <div class="section">
             <h2 class="title">Posts</h2>
+            {% if tag %}
+            <h3>Posts tagged with "{{ tag.name }}"</h3>
+            {% endif %}
             <div class="row mt-5">
                 {% for post in post_list %}
                 <div class="col-12 col-md-6 col-lg-4 mb-3">
@@ -37,6 +40,9 @@
                                 <a href="{{ post.get_absolute_url }}" class="text-dark">
                                     <h4 class="card-title">{{ post.title|title }}</h4>
                                 </a>
+                                {% for tag in post.tags.all %}
+                                <a href="{% url 'blog:post_list_by_tag' tag.slug %}">{{ tag.name }}</a>
+                                {% endfor %}
                                 <p class="card-text">{{ post.body|truncatewords:30|linebreaks }}</p>
                             </div>
                         </div>
