--- a/backend/blog/templates/blog/post_detail.html
+++ b/backend/blog/templates/blog/post_detail.html
@@ -32,23 +32,54 @@
             <div class="container p-md-3">
                 <p>{{ post.body }}</p>
             </div>
+        </div>
 
-            <!-- Similar Posts -->
-            <div class="container p-md-3 mb-3 bg-light">
+        <!-- Similar Posts -->
+        <div class="container-fluid p-md-3 mb-3 bg-light">
+            <div class="container">
                 <h2>Similar posts</h2>
-                {% for post in similar_posts %}
-                <p>
-                    <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
-                </p>
-                {% empty %}
-                There are no similar posts yet.
-                {% endfor %}
+                <div class="row pb-md-5">
+                    {% for post in similar_posts %}
+                    <div class="col-12 col-md-6 col-lg-4 mb-3">
+                        <div class="card h-100">
+                            <a href="{{ post.get_absolute_url }}">
+                                <img class="card-img-top" src="https://picsum.photos/500" rel="nofollow"
+                                    alt="Card image cap">
+                            </a>
+                            <div class="card-body">
+                                <div>
+                                    <a href="{{ post.get_absolute_url }}" class="text-dark">
+                                        <h4 class="card-title">{{ post.title|title }}</h4>
+                                    </a>
+                                    {% for tag in post.tags.all %}
+                                    <a href="{% url 'blog:post_list_by_tag' tag.slug %}">{{ tag.name }}</a>
+                                    {% endfor %}
+                                    <p class="card-text">{{ post.body|truncatewords:30|linebreaks }}</p>
+                                </div>
+                            </div>
+                            <div class="card-footer d-flex justify-content-between">
+                                <div>
+                                    {{ post.updated|date:"jS M" }}
+                                </div>
+                                <div>
+                                    {{ post.author }}
+                                    <i class="{{ post.author.country.flag_css }}"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% empty %}
+                    <p>There are no similar posts</p>
+                    {% endfor %}
+                </div>
             </div>
+        </div>
 
+        <div class="container">
             <ul class="nav nav-pills nav-pills-icons justify-content-center" role="tablist">
                 <!--
-                    color-classes: "nav-pills-primary", "nav-pills-info", "nav-pills-success", "nav-pills-warning","nav-pills-danger"
-                -->
+                        color-classes: "nav-pills-primary", "nav-pills-info", "nav-pills-success", "nav-pills-warning","nav-pills-danger"
+                    -->
                 <li class="nav-item">
                     <a class="nav-link active" href="#comments-1" role="tab" data-toggle="tab">
                         <i class="material-icons">message</i>
@@ -76,7 +107,6 @@
                         <i class="material-icons mr-2">assignment</i>
                         Add comment
                     </button>
-
                     {% for comment in comments %}
                     <div class="info info-horizontal">
                         <div class="icon icon-rose">
