--- a/backend/places/templates/places/place_list.html
+++ b/backend/places/templates/places/place_list.html
@@ -38,7 +38,10 @@
                                 <a href="{{ place.get_absolute_url }}" class="text-dark">
                                     <h4 class="card-title">{{ place.name|title }}</h4>
                                 </a>
-                                <p class="card-text">{{ place.description }}</p>
+                                {% for tag in post.tags.all %}
+                                <a href="">{{ tag.name }}</a>
+                                {% endfor %}
+                                <p class="card-text">{{ place.description|truncatewords:30|linebreaks }}</p>
                             </div>
                         </div>
                         <div class="card-footer d-flex justify-content-between">
