--- a/backend/places/templates/places/place_list.html
+++ b/backend/places/templates/places/place_list.html
@@ -24,8 +24,10 @@
     <div class="container pt-5 mb-3">
         <div class="section">
             <h2 class="title">Places</h2>
+            {% if tag %}
+            <h3>Places tagged with "{{ tag.name }}"</h3>
+            {% endif %}
             <div class="row mt-5">
-
                 {% for place in place_list %}
                 <div class="col-12 col-md-6 col-lg-4 mb-3">
                     <div class="card h-100">
@@ -38,8 +40,10 @@
                                 <a href="{{ place.get_absolute_url }}" class="text-dark">
                                     <h4 class="card-title">{{ place.name|title }}</h4>
                                 </a>
-                                {% for tag in post.tags.all %}
-                                <a href="">{{ tag.name }}</a>
+                                {% for tag in place.tags.all %}
+                                <a href="{% url 'places:place_list_by_tag' tag.slug %}">
+                                    {{ tag.name }}
+                                </a>
                                 {% endfor %}
                                 <p class="card-text">{{ place.description|truncatewords:30|linebreaks }}</p>
                             </div>
