updated reference to base templates in layouts and include

--- a/backend/blog/templates/blog/post_list.html
+++ b/backend/blog/templates/blog/post_list.html
@@ -1,4 +1,4 @@
-{% extends '_base.html' %}
+{% extends 'layouts/_base.html' %}
 {% load static %}
 {% block title %}Blog{% endblock title %}
 
@@ -61,7 +61,7 @@
             </div>
         </div>
 
-        {% include '_pagination.html' %}
+        {% include 'includes/_pagination.html' %}
     </div>
 </div>
 
