--- a/backend/pages/templates/pages/home.html
+++ b/backend/pages/templates/pages/home.html
@@ -1,4 +1,4 @@
-{% extends '_base.html' %}
+{% extends 'layouts/_base-fullscreen.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
