--- a/backend/places/templates/places/place_detail.html
+++ b/backend/places/templates/places/place_detail.html
@@ -1,4 +1,4 @@
-{% extends '_base.html' %}
+{% extends 'layouts/_base.html' %}
 {% load static %}
 
 {% block title %}{{ place.name|title }}{% endblock title %}
