--- a/backend/places/templates/places/place_list.html
+++ b/backend/places/templates/places/place_list.html
@@ -1,4 +1,4 @@
-{% extends '_base.html' %}
+{% extends 'layouts/_base.html' %}
 {% load static %}
 {% block title %}Places{% endblock title %}
 
@@ -64,7 +64,7 @@
             </div>
         </div>
 
-        {% include '_pagination.html' %}
+        {% include 'includes/_pagination.html' %}
     </div>
 
 </div>
