--- a/backend/templates/account/email_confirm.html
+++ b/backend/templates/account/email_confirm.html
@@ -1,4 +1,4 @@
-{% extends '_base.html' %}
+{% extends 'layouts/_base.html' %}
 {% load i18n %}
 {% load account %}
 {% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
@@ -6,8 +6,8 @@
 <h1>{% trans "Confirm E-mail Address" %}</h1>
 {% if confirmation %}
 {% user_display confirmation.email_address.user as user_display %}
-<p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a
-        href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}
+<p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{
+        email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}
 </p>
 <form method="post" action="{% url 'account_confirm_email' confirmation.key %}"> {% csrf_token %}
     <button class="btn btn-primary" type="submit">{% trans 'Confirm' %}</button>
