--- a/backend/templates/account/signup.html
+++ b/backend/templates/account/signup.html
@@ -1,4 +1,4 @@
-{% extends '_base.html' %}
+{% extends 'layouts/_base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% block title %}Sign Up{% endblock title %}
