--- a/backend/templates/layouts/_base.html
+++ b/backend/templates/layouts/_base.html
@@ -1,160 +1,3 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'layouts/_base-fullscreen.html' %}
 
-<head>
-    <title>{% block title %}Volu{% endblock title %}</title>
-
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
-
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'pages/img/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'pages/img/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'pages/img/favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static 'pages/img/site.webmanifest' %}">
-
-
-
-    <!--     Fonts and icons     -->
-    <link rel="stylesheet" type="text/css"
-        href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
-
-    <!-- CSS Files -->
-    <link href="{% static 'pages/css/material-kit.css' %}" rel="stylesheet" />
-    <link href="{% static 'pages/css/base.css' %}" rel="stylesheet" />
-    <link href="{% static 'flags/sprite-hq.css' %}" rel="stylesheet" />
-</head>
-
-<body class="{% block page-type %}login-page sidebar-collapse{% endblock page-type %}">
-    <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100"
-        id="sectionsNav">
-        <div class="container">
-            <div class="navbar-translate">
-                <a class="navbar-brand" href="{% url 'pages:home' %}">
-                    Volu
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="navbar-toggler-icon"></span>
-                    <span class="navbar-toggler-icon"></span>
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav ml-auto">
-                    <li class="dropdown nav-item">
-                        <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                            <i class="material-icons">apps</i> Explore
-                        </a>
-                        <div class="dropdown-menu dropdown-with-icons">
-                            <a href="{% url 'places:place_list' %}" class="dropdown-item">
-                                <i class="material-icons">explore</i> Places
-                            </a>
-                            <a href="{{ user.profile.get_absolute_url }}" class="dropdown-item">
-                                <i class="material-icons">contacts</i> Profile
-                            </a>
-                            <a href="{% url 'places:place_create' %}" class="dropdown-item">
-                                <i class="material-icons">add_location</i> Host
-                            </a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        {% if user.is_authenticated %}
-                        <a class="nav-link" href="{% url 'account_logout' %}">
-                            <i class="material-icons">face</i>
-                        </a>
-                        {% else %}
-                        <a class="nav-link" href="{% url 'account_login' %}">
-                            <i class="material-icons">face</i>
-                        </a>
-                        {% endif %}
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="" target="_blank"
-                            data-original-title="Follow us on Twitter" rel="nofollow">
-                            <i class="fa fa-twitter"></i>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="" target="_blank"
-                            data-original-title="Like us on Facebook" rel="nofollow">
-                            <i class="fa fa-facebook-square"></i>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="" target="_blank"
-                            data-original-title="Follow us on Instagram" rel="nofollow">
-                            <i class="fa fa-instagram"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    {% include '_alert.html' %}
-    {% block header %}{% endblock header %}
-    {% block content %}{% endblock content %}
-
-
-    <footer class="footer">
-        <div class="container">
-            <nav class="float-left">
-                <ul>
-                    <li>
-                        <a href="">
-                            Volunteer
-                        </a>
-                    </li>
-                    <li>
-                        <a href="{% url 'pages:about' %}">
-                            About Us
-                        </a>
-                    </li>
-                    <li>
-                        <a href="{% url 'pages:feedback' %}">
-                            Feedback
-                        </a>
-                    </li>
-                    <li>
-                        <a href="{% url 'blog:post_list' %}">
-                            Blog
-                        </a>
-                    </li>
-                    <li>
-                        <a href="{% url 'pages:contact' %}">
-                            Contact
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="copyright float-right d-none d-md-inline">
-                &copy;
-                <script>
-                    document.write(new Date().getFullYear())
-                </script>, made with <i class="material-icons">favorite</i> by
-                <a href="" target="_blank">volunteers</a> for a better travel.
-            </div>
-        </div>
-    </footer>
-    <!--   Core JS Files   -->
-    <script src="{% static 'pages/js/core/jquery.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'pages/js/core/popper.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'pages/js/core/bootstrap-material-design.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'pages/js/plugins/moment.min.js' %}"></script>
-
-    <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
-    <script src="{% static 'pages/js/plugins/bootstrap-datetimepicker.js' %}" type="text/javascript"></script>
-
-    <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-    <script src="{% static 'pages/js/plugins/nouislider.min.js' %}" type="text/javascript"></script>
-    <!--  Google Maps Plugin    -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-    <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
-    <script src="{% static 'pages/js/material-kit.js' %}" type="text/javascript"></script>
-</body>
-
-</html>
+{% block navigation %}{% include 'includes/_navigation.html' %}{% endblock navigation %}
