--- a/backend/templates/includes/_footer.html
+++ b/backend/templates/includes/_footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <div class="container">
+    <div class="container bg-danger">
         <nav class="float-left">
             <ul>
                 <li>
