--- a/backend/templates/layouts/_base.html
+++ b/backend/templates/layouts/_base.html
@@ -1,3 +1,4 @@
 {% extends 'layouts/_base-fullscreen.html' %}
 
 {% block navigation %}{% include 'includes/_navigation.html' %}{% endblock navigation %}
+{% block footer %}{% include 'includes/_footer.html' %}{% endblock footer %}
