--- a/backend/templates/layouts/_base-fullscreen.html
+++ b/backend/templates/layouts/_base-fullscreen.html
@@ -1,4 +1,3 @@
-{% load blog_tags %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -27,13 +26,13 @@
 </head>
 
 <body class="{% block page-type %}login-page sidebar-collapse{% endblock page-type %}">
-    {% block navigation %}{% endblock navigation %}
     {% include 'includes/_alert.html' %}
 
+    {% block navigation %}{% endblock navigation %}
     {% block header %}{% endblock header %}
     {% block content %}{% endblock content %}
+    {% block footer %}{% endblock footer %}
 
-    {% include 'includes/_footer.html' %}
     {% include 'includes/_scripts.html' %}
 </body>
 
