Add custom js block to show datepicker

--- a/backend/templates/layouts/_base-fullscreen.html
+++ b/backend/templates/layouts/_base-fullscreen.html
@@ -34,6 +34,7 @@
     {% block footer %}{% endblock footer %}
 
     {% include 'includes/_scripts.html' %}
+    {% block js %}{% endblock js %}
 </body>
 
 </html>
