--- a/backend/templates/includes/_scripts.html
+++ b/backend/templates/includes/_scripts.html
@@ -14,3 +14,8 @@
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
 <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
 <script src="{% static 'pages/js/material-kit.js' %}" type="text/javascript"></script>
+<script>
+    $(document).ready(function () {
+        $('.datepicker').datepicker();
+    });
+</script>
