correct home redirect url

--- a/backend/templates/500.html
+++ b/backend/templates/500.html
@@ -15,7 +15,8 @@
                     <div class="card-body d-flex flex-column justify-content-center mx-5">
                         Something is broken that's all that we know :(
                     </div>
-                    <p class="description text-center mb-3"><a href="{% url 'home' %}" class="btn btn-primary">Go back
+                    <p class="description text-center mb-3"><a href="{% url 'pages:home' %}" class="btn btn-primary">Go
+                            back
                             home</a></p>
                 </div>
             </div>
