--- a/backend/templates/404.html
+++ b/backend/templates/404.html
@@ -15,7 +15,7 @@
                     <div class="card-body d-flex flex-column justify-content-center mx-5">
                         We can't find what you are looking for.
                     </div>
-                    <p class="description text-center mb-3"><a href="{% url 'home' %}" class="btn btn-primary">Go back
+                    <p class="description text-center mb-3"><a href="{% url 'pages:home' %}" class="btn btn-primary">Go back
                             home</a></p>
                 </div>
             </div>
