--- a/backend/places/templates/places/place_update_form.html
+++ b/backend/places/templates/places/place_update_form.html
@@ -18,7 +18,7 @@
                             {% csrf_token %}
                             {{ form|crispy }}
                             <div class="d-flex justify-content-end">
-                                <a href="{% url 'home' %}" class="btn btn-secondary">Cancel</a>
+                                <a href="{% url 'pages:home' %}" class="btn btn-secondary">Cancel</a>
                                 <button type="submit" class="btn btn-primary ml-2">Save</button>
                             </div>
                         </form>
