--- a/backend/places/templates/places/place_detail.html
+++ b/backend/places/templates/places/place_detail.html
@@ -76,26 +76,26 @@
                 <div class="tab-pane text-center gallery" id="works">
                     <div class="row">
                         <div class="col-md-3 ml-auto">
-                            <img src="../assets/img/examples/olu-eletu.jpg" class="rounded">
-                            <img src="../assets/img/examples/clem-onojeghuo.jpg" class="rounded">
-                            <img src="../assets/img/examples/cynthia-del-rio.jpg" class="rounded">
+                            <img src="" class="rounded">
+                            <img src="" class="rounded">
+                            <img src="" class="rounded">
                         </div>
                         <div class="col-md-3 mr-auto">
-                            <img src="../assets/img/examples/mariya-georgieva.jpg" class="rounded">
-                            <img src="../assets/img/examples/clem-onojegaw.jpg" class="rounded">
+                            <img src="" class="rounded">
+                            <img src="" class="rounded">
                         </div>
                     </div>
                 </div>
                 <div class="tab-pane text-center gallery" id="favorite">
                     <div class="row">
                         <div class="col-md-3 ml-auto">
-                            <img src="../assets/img/examples/mariya-georgieva.jpg" class="rounded">
-                            <img src="../assets/img/examples/studio-3.jpg" class="rounded">
+                            <img src="" class="rounded">
+                            <img src="" class="rounded">
                         </div>
                         <div class="col-md-3 mr-auto">
-                            <img src="../assets/img/examples/clem-onojeghuo.jpg" class="rounded">
-                            <img src="../assets/img/examples/olu-eletu.jpg" class="rounded">
-                            <img src="../assets/img/examples/studio-1.jpg" class="rounded">
+                            <img src="" class="rounded">
+                            <img src="" class="rounded">
+                            <img src="" class="rounded">
                         </div>
                     </div>
                 </div>
