--- a/backend/subscriptions/templates/subscriptions/purchase.html
+++ b/backend/subscriptions/templates/subscriptions/purchase.html
@@ -9,7 +9,21 @@
         <div class="row">
             <div class="col-md-8 ml-auto mr-auto">
                 <div class="text-center">
+                    {% if subscription.status == "active" %}
+                    <div class="card">
+                        <div class="card-header card-header-primary rounded">
+                            <h4 class="card-title">Your subscription</h4>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">{{ product.name }}</h5>
+                            <p class="card-text">
+                                {{ product.description }}
+                            </p>
+                        </div>
+                    </div>
+                    {% else %}
                     <button type="submit" id="submitBtn" class="btn btn-white btn-lg">Subscribe</button>
+                    {% endif %}
                 </div>
             </div>
         </div>
