--- a/backend/templates/includes/_navigation.html
+++ b/backend/templates/includes/_navigation.html
@@ -33,6 +33,12 @@
                     </div>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'pages:search' %}">
+                        <i class="material-icons">search</i>
+                    </a>
+                </li>
+                <li class="nav-item">
+
                     {% if user.is_authenticated %}
                     <a class="nav-link" href="{% url 'account_logout' %}">
                         <i class="material-icons">face</i>
