--- a/backend/templates/includes/_scripts.html
+++ b/backend/templates/includes/_scripts.html
@@ -11,6 +11,7 @@
 <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
 <script src="{% static 'pages/js/plugins/nouislider.min.js' %}" type="text/javascript"></script>
 <!--  Google Maps Plugin    -->
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+{% comment %} <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+{% endcomment %}
 <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
 <script src="{% static 'pages/js/material-kit.js' %}" type="text/javascript"></script>
