Optimize html templates with comments

--- a/backend/templates/includes/_alert.html
+++ b/backend/templates/includes/_alert.html
@@ -1,3 +1,4 @@
+<!-- Alerts -->
 <div aria-live="polite" aria-atomic="true" style="position: relative; min-height: 1px;">
     <!-- Position it -->
     <div style="position: absolute; top: 80px; min-width: 100vw;">
