--- a/backend/blog/templates/blog/post_list.html
+++ b/backend/blog/templates/blog/post_list.html
@@ -2,7 +2,10 @@
 {% load static %}
 {% block title %}Blog{% endblock title %}
 
-{% block header %}
+{% block page-type %}landing-page sidebar-collapse{% endblock page-type %}
+
+{% block content %}
+
 <div class="page-header header-filter" data-parallax="true"
     style="background-image: url({% static 'pages/img/bg3.jpg' %});">
     <div class="container">
@@ -16,9 +19,6 @@
         </div>
     </div>
 </div>
-{% endblock header %}
-
-{% block content %}
 
 <div class="main main-raised">
     <div class="container">
