Use correct tag on page type

--- a/backend/places/templates/places/place_form.html
+++ b/backend/places/templates/places/place_form.html
@@ -3,6 +3,8 @@
 {% load crispy_forms_tags %}
 {% block title %}Create{% endblock title %}
 
+{% block page-type %}landing-page sidebar-collapse{% endblock page-type %}
+
 {% block content %}
 <div class="main header-filter" data-parallax="true"
     style="min-height: 100vh; background-image: url({% static 'pages/img/bg7.jpg' %});">
