Show footer on home page

--- a/backend/places/templates/places/place_list.html
+++ b/backend/places/templates/places/place_list.html
@@ -3,7 +3,9 @@
 {% block title %}Places{% endblock title %}
 
 
-{% block header %}
+{% block page-type %}landing-page sidebar-collapse{% endblock page-type %}
+
+{% block content %}
 <div class="page-header header-filter" data-parallax="true"
     style="background-image: url({% static 'pages/img/bg3.jpg' %});">
     <div class="container">
@@ -17,9 +19,6 @@
         </div>
     </div>
 </div>
-{% endblock header %}
-
-{% block content %}
 <div class="main main-raised">
     <div class="container pt-5 mb-3">
         <div class="section">
