--- a/backend/templates/includes/_footer.html
+++ b/backend/templates/includes/_footer.html
@@ -5,6 +5,24 @@
         <nav class="float-left">
             <ul>
                 <li>
+                    <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="" target="_blank"
+                        data-original-title="Follow us on Twitter" rel="nofollow">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="" target="_blank"
+                        data-original-title="Like us on Facebook" rel="nofollow">
+                        <i class="fa fa-facebook-square"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="" target="_blank"
+                        data-original-title="Follow us on Instagram" rel="nofollow">
+                        <i class="fa fa-instagram"></i>
+                    </a>
+                </li>
+                <li>
                     <a href="">
                         Volunteer
                     </a>
