--- a/backend/templates/includes/_navigation.html
+++ b/backend/templates/includes/_navigation.html
@@ -24,12 +24,6 @@
                         <a href="{% url 'places:place_list' %}" class="dropdown-item">
                             <i class="material-icons">explore</i> Places
                         </a>
-                        <a href="{{ user.profile.get_absolute_url }}" class="dropdown-item">
-                            <i class="material-icons">contacts</i> Profile
-                        </a>
-                        <a href="{% url 'places:place_create' %}" class="dropdown-item">
-                            <i class="material-icons">add_location</i> Host
-                        </a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -38,10 +32,23 @@
                     </a>
                 </li>
                 {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'account_logout' %}">
-                        <i class="material-icons">account_circle</i>
+                <li class="dropdown nav-item">
+                    <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+                        <i class="material-icons">account_circle</i>Profile
                     </a>
+                    <div class="dropdown-menu dropdown-with-icons">
+                        <a href="{{ user.profile.get_absolute_url }}" class="dropdown-item">
+                            <i class="material-icons">contacts</i> Profile
+                        </a>
+                        <a href="{{ user.profile.get_update_url }}" class="dropdown-item">
+                            <i class="material-icons">edit</i> Edit Profile
+                        </a>
+                        <hr class="divider">
+                        </hr>
+                        <a href="{% url 'account_logout' %}" class="dropdown-item">
+                            <i class="material-icons">logout</i> Sign Out
+                        </a>
+                    </div>
                 </li>
                 {% else %}
                 <li class="nav-item">
