Add privacy and term links to footer

--- a/backend/templates/includes/_footer.html
+++ b/backend/templates/includes/_footer.html
@@ -47,6 +47,16 @@
                         Contact
                     </a>
                 </li>
+                <li>
+                    <a href="{% url 'pages:privacy' %}">
+                        Privacy policy
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'pages:terms' %}">
+                        Terms of service
+                    </a>
+                </li>
             </ul>
         </nav>
         <div class="copyright float-right d-none d-md-inline">
