--- a/backend/blog/templates/blog/post_list.html
+++ b/backend/blog/templates/blog/post_list.html
@@ -1,5 +1,6 @@
 {% extends 'layouts/_base.html' %}
 {% load static %}
+{% load blog_tags %}
 {% block title %}Blog{% endblock title %}
 
 {% block page-type %}landing-page sidebar-collapse{% endblock page-type %}
@@ -41,7 +42,10 @@
                                     <h4 class="card-title">{{ post.title|title }}</h4>
                                 </a>
                                 {% for tag in post.tags.all %}
-                                <a href="{% url 'blog:post_list_by_tag' tag.slug %}">{{ tag.name }}</a>
+                                <a href="{% url 'blog:post_list_by_tag' tag.slug %}"
+                                    class="badge badge-primary badge-pill">
+                                    {{ tag.name }}
+                                </a>
                                 {% endfor %}
                                 <p class="card-text">{{ post.body|truncatewords:30|linebreaks }}</p>
                             </div>
@@ -59,6 +63,46 @@
                 </div>
                 {% endfor %}
             </div>
+            <h2 class="title">Most Popular</h2>
+            {% get_most_commented_posts as most_commented_posts %}
+            <div class="row mt-5">
+                {% for post in most_commented_posts %}
+                <div class="col-12 col-md-6 col-lg-4 mb-3">
+                    <div class="card h-100">
+                        <a href="{{ post.get_absolute_url }}">
+                            <img class="card-img-top" src="https://picsum.photos/500" rel="nofollow"
+                                alt="Card image cap">
+                        </a>
+                        <div class="card-body">
+                            <div>
+                                <a href="{{ post.get_absolute_url }}" class="text-dark">
+                                    <h4 class="card-title">{{ post.title|title }}</h4>
+                                </a>
+                                {% for tag in post.tags.all %}
+                                <a href="{% url 'blog:post_list_by_tag' tag.slug %}"
+                                    class="badge badge-primary badge-pill">
+                                    {{ tag.name }}
+                                </a>
+                                {% endfor %}
+                                <p class="card-text">{{ post.body|truncatewords:30|linebreaks }}</p>
+                            </div>
+                        </div>
+                        <div class="card-footer d-flex justify-content-between">
+                            <div>
+                                {{ post.updated|date:"jS M" }}
+                            </div>
+                            <div>
+                                {{ post.author }}
+                                <i class="{{ post.author.country.flag_css }}"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+
+            {% show_latest_posts 3 %}
+
         </div>
 
         {% include 'includes/_pagination.html' %}
