Add rss feeds for blog posts

--- a/backend/blog/templates/blog/post_list.html
+++ b/backend/blog/templates/blog/post_list.html
@@ -15,6 +15,10 @@
                 <div class="brand text-center">
                     <h1>Blogs</h1>
                     <h3 class="title text-center">A few words</h3>
+                    <a href="{% url 'blog:post_feed' %}" class="btn btn-white btn-round text-dark">
+                        <i class="material-icons">rss_feed</i>
+                        Subscribe to RSS
+                    </a>
                 </div>
             </div>
         </div>
