Rss feeds enabled for places app

--- a/backend/places/templates/places/place_list.html
+++ b/backend/places/templates/places/place_list.html
@@ -14,6 +14,10 @@
                 <div class="brand text-center">
                     <h1>Places</h1>
                     <h3 class="title text-center">to volunteer</h3>
+                    <a href="{% url 'places:place_feed' %}" class="btn btn-white btn-round text-dark">
+                        <i class="material-icons">rss_feed</i>
+                        Subscribe to RSS
+                    </a>
                 </div>
             </div>
         </div>
