Link twitter provider url

--- a/backend/templates/account/signup.html
+++ b/backend/templates/account/signup.html
@@ -22,7 +22,8 @@
                                     class="btn btn-just-icon btn-link">
                                     <i class="fa fa-facebook-square"></i>
                                 </a>
-                                <a href="#pablo" class="btn btn-just-icon btn-link">
+                                <a href="{% provider_login_url "twitter" method="oauth2" %}"
+                                    class="btn btn-just-icon btn-link">
                                     <i class="fa fa-twitter"></i>
                                 </a>
                                 <a href="#pablo" class="btn btn-just-icon btn-link">
