Fix alert bug by removing header-filter from templates

--- a/backend/pages/templates/pages/contact.html
+++ b/backend/pages/templates/pages/contact.html
@@ -4,7 +4,7 @@
 {% block title %}Contact{% endblock title %}
 
 {% block content %}
-<div class="page-header header-filter"
+<div class="page-header"
     style="background-image: url({% static 'pages/img/bg7.jpg' %}); background-size: cover; background-position: top center;">
     <div class="container">
         <div class="row mt-5 mt-md-0">
