--- a/backend/places/templates/places/place_list.html
+++ b/backend/places/templates/places/place_list.html
@@ -6,8 +6,7 @@
 {% block page-type %}landing-page sidebar-collapse{% endblock page-type %}
 
 {% block content %}
-<div class="page-header header-filter" data-parallax="true"
-    style="background-image: url({% static 'pages/img/bg3.jpg' %});">
+<div class="page-header" data-parallax="true" style="background-image: url({% static 'pages/img/bg3.jpg' %});">
     <div class="container">
         <div class="row">
             <div class="col-md-8 ml-auto mr-auto">
