--- a/backend/blog/templates/blog/post_comment.html
+++ b/backend/blog/templates/blog/post_comment.html
@@ -7,7 +7,7 @@
 {% block page-type %}landing-page sidebar-collapse{% endblock page-type %}
 
 {% block content %}
-<div class="page-header header-filter" data-parallax="true"
+<div class="page-header" data-parallax="true"
     style="background-image: url({% static 'pages/img/bg7.jpg' %}); background-size: cover; background-position: top center;">
     <div class="container">
         <div class="row mt-5">
