--- a/backend/blog/templates/blog/post_list.html
+++ b/backend/blog/templates/blog/post_list.html
@@ -7,8 +7,7 @@
 
 {% block content %}
 
-<div class="page-header header-filter" data-parallax="true"
-    style="background-image: url({% static 'pages/img/bg3.jpg' %});">
+<div class="page-header" data-parallax="true" style="background-image: url({% static 'pages/img/bg3.jpg' %});">
     <div class="container">
         <div class="row">
             <div class="col-md-8 ml-auto mr-auto">
