--- a/backend/orders/templates/orders/payment_cancel.html
+++ b/backend/orders/templates/orders/payment_cancel.html
@@ -5,7 +5,7 @@
 {% block page-type %}landing-page fill{% endblock page-type %}
 
 {% block header %}
-<div class="page-header header-filter" style="background-image: url({% static 'pages/img/city.jpg' %});">
+<div class="page-header" style="background-image: url({% static 'pages/img/city.jpg' %});">
     <div class="container">
         <div class="row">
             <div class="col-md-8 ml-auto mr-auto">
