--- a/backend/pages/templates/pages/search.html
+++ b/backend/pages/templates/pages/search.html
@@ -5,7 +5,7 @@
 
 
 {% block content %}
-<div class="page-header header-filter bg-primary">
+<div class="page-header bg-primary">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-6 text-center">
