--- a/backend/places/templates/places/place_detail.html
+++ b/backend/places/templates/places/place_detail.html
@@ -6,7 +6,7 @@
 {% block page-type %}profile-page sidebar-collapse{% endblock page-type %}
 
 {% block header %}
-<div class="page-header header-filter" data-parallax="true"
+<div class="page-header header" data-parallax="true"
     style="background-image: url({% static 'pages/img/city-profile.jpg' %});"></div>
 {% endblock header %}
 
