--- a/backend/places/templates/places/place_form.html
+++ b/backend/places/templates/places/place_form.html
@@ -6,7 +6,7 @@
 {% block page-type %}landing-page sidebar-collapse{% endblock page-type %}
 
 {% block content %}
-<div class="main header-filter" data-parallax="true"
+<div class="main" data-parallax="true"
     style="min-height: 100vh; background-image: url({% static 'pages/img/bg7.jpg' %});">
     <div class="container pt-5 mb-3">
         <div class="row mt-5 justify-content-center">
