--- a/backend/places/templates/places/search_results.html
+++ b/backend/places/templates/places/search_results.html
@@ -4,8 +4,7 @@
 
 
 {% block header %}
-<div class="page-header header-filter" data-parallax="true"
-    style="background-image: url({% static 'pages/img/bg3.jpg' %});">
+<div class="page-header" data-parallax="true" style="background-image: url({% static 'pages/img/bg3.jpg' %});">
     <div class="container">
         <div class="row">
             <div class="col-md-8 ml-auto mr-auto">
