--- a/backend/subscriptions/templates/subscriptions/purchase.html
+++ b/backend/subscriptions/templates/subscriptions/purchase.html
@@ -4,7 +4,7 @@
 {% block title %}Subscribe{% endblock title %}
 
 {% block header %}
-<div class="page-header header-filter" style="background-image: url({% static 'pages/img/bg.jpg' %});">
+<div class="page-header" style="background-image: url({% static 'pages/img/bg.jpg' %});">
     <div class="container">
         <div class="row">
             <div class="col-md-8 ml-auto mr-auto">
