--- a/backend/templates/404.html
+++ b/backend/templates/404.html
@@ -3,7 +3,7 @@
 {% block title %}Not Found{% endblock title %}
 
 {% block content %}
-<div class="page-header header-filter" data-parallax="true"
+<div class="page-header" data-parallax="true"
     style="background-image: url({% static 'pages/img/bg7.jpg' %}); background-size: cover; background-position: top center;">
     <div class="container">
         <div class="row mt-5">
@@ -15,7 +15,8 @@
                     <div class="card-body d-flex flex-column justify-content-center mx-5">
                         We can't find what you are looking for.
                     </div>
-                    <p class="description text-center mb-3"><a href="{% url 'pages:home' %}" class="btn btn-primary">Go back
+                    <p class="description text-center mb-3"><a href="{% url 'pages:home' %}" class="btn btn-primary">Go
+                            back
                             home</a></p>
                 </div>
             </div>
