--- a/backend/templates/500.html
+++ b/backend/templates/500.html
@@ -3,7 +3,7 @@
 {% block title %}Error{% endblock title %}
 
 {% block content %}
-<div class="page-header header-filter" data-parallax="true"
+<div class="page-header" data-parallax="true"
     style="background-image: url({% static 'pages/img/bg7.jpg' %}); background-size: cover; background-position: top center;">
     <div class="container">
         <div class="row mt-5">
