--- a/backend/templates/account/login.html
+++ b/backend/templates/account/login.html
@@ -7,7 +7,7 @@
 {% block title %}Log In{% endblock title %}
 
 {% block content %}
-<div class="page-header header-filter" data-parallax="true"
+<div class="page-header" data-parallax="true"
     style="background-image: url({% static 'pages/img/bg7.jpg' %}); background-size: cover; background-position: top center;">
     <div class="container">
         <div class="row mt-5">
