--- a/backend/templates/account/signup.html
+++ b/backend/templates/account/signup.html
@@ -7,7 +7,7 @@
 {% block title %}Sign Up{% endblock title %}
 
 {% block content %}
-<div class="page-header header-filter"
+<div class="page-header"
     style="background-image: url({% static 'pages/img/bg7.jpg' %}); background-size: cover; background-position: top center;">
     <div class="container">
         <div class="row">
