--- a/backend/templates/socialaccount/signup.html
+++ b/backend/templates/socialaccount/signup.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 
-<div class="page-header header-filter" data-parallax="true"
+<div class="page-header" data-parallax="true"
     style="background-image: url({% static 'pages/img/bg7.jpg' %}); background-size: cover; background-position: top center;">
     <div class="container">
         <div class="row mt-5">
