--- a/backend/users/templates/users/profile_detail.html
+++ b/backend/users/templates/users/profile_detail.html
@@ -4,7 +4,7 @@
 {% block title %}Profile{% endblock title %}
 
 {% block content %}
-<div class="page-header header-filter" data-parallax="true"
+<div class="page-header" data-parallax="true"
   style="background-image: url({% static 'pages/img/bg2.jpg' %}); background-size: cover; background-position: top center;">
   <div class="container">
     <div class="row mt-5">
